@@ -150,7 +150,7 @@ make
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make install prefix="$RPM_BUILD_ROOT/usr" sysconfdir="$RPM_BUILD_ROOT/etc/ssh"
+make install DESTDIR=$RPM_BUILD_ROOT/
 install -d $RPM_BUILD_ROOT/etc/ssh/
 install -d $RPM_BUILD_ROOT/etc/pam.d/
 install -d $RPM_BUILD_ROOT/sbin/init.d/
